--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Diebold_Call_In" />
+        <activity android:name=".Diebold_Call_In"
+
+            android:parentActivityName="com.example.vgagnon.yevos.MainActivity">
+
+        </activity>
     </application>
 
 </manifest>
