--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         </activity>
         <activity
             android:name=".Diebold_Call_In"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".Multitech_Call_In"></activity>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Multitech_Call_In" />
+        <activity android:name=".multitechPiece"></activity>
     </application>
 
 </manifest>
